--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,33 @@
 <manifest package="com.avengers.publicim"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<uses-permission android:name="android.permission.INTERNET"/>
+
 	<application
-		android:allowBackup="true"
+		android:allowBackup="false"
+		android:name=".conponent.RutenApplication"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
-		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
+		android:theme="@style/AppTheme.NoActionBar">
 		<activity
-			android:name=".MainActivity"
-			android:label="@string/app_name"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:name=".activity.MainActivity"
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".activity.ChatActivity"
+			android:label="@string/title_activity_chat">
+		</activity>
+
+		<service
+			android:name=".conponent.IMService"
+			android:enabled="true"
+			android:exported="true">
+		</service>
 	</application>
 
 </manifest>
