--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,32 @@
 apply plugin: 'com.android.application'
+apply plugin: 'jacoco'
 apply plugin: 'checkstyle'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.avengers.publicim"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled = true
+        }
     }
 }
 
-apply plugin: 'checkstyle'
-
 checkstyle {
-    toolVersion '6.15'
-    showViolations true
+    toolVersion = '6.15'
+    showViolations = true
 }
 
 check.dependsOn 'checkstyle'
@@ -38,15 +41,27 @@ task checkstyle(type: Checkstyle) {
     classpath = files()
 }
 
+jacoco {
+    toolVersion = "0.7.6.201602180812"
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
     compile('io.socket:socket.io-client:0.7.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+
+    //
+    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+    androidTestCompile 'com.android.support.test:rules:0.4.1'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.android.support:support-v4:23.3.0'
 }
-apply plugin: 'checkstyle'
