--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.avengers.publicim" >
+<manifest package="com.avengers.publicim"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.INTERNET"/>
 
-    <application
-        android:name=".conponent.IMApplication"
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme.NoActionBar" >
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:name=".conponent.IMApplication"
+		android:allowBackup="false"
+		android:icon="@mipmap/ic_launcher"
+		android:label="@string/app_name"
+		android:theme="@style/AppTheme.NoActionBar">
+		<activity
+			android:name=".activity.MainActivity"
+			android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".activity.ChatActivity"
-            android:label="@string/title_activity_chat" >
-        </activity>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity
+			android:name=".activity.ChatActivity"
+			android:label="@string/title_activity_chat">
+		</activity>
 
-        <service
-            android:name=".conponent.IMService"
-            android:enabled="true"
-            android:exported="true" >
-        </service>
+		<service
+			android:name=".conponent.IMService"
+			android:enabled="true"
+			android:exported="true">
+		</service>
 
-        <activity
-            android:name=".activity.InviteActivity"
-            android:label="@string/title_activity_invite"
-            android:theme="@style/AppTheme.NoActionBar" >
-        </activity>
-    </application>
+		<activity
+			android:name=".activity.InviteActivity"
+			android:label="@string/title_activity_invite"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+		<activity
+			android:name=".activity.MemberActivity"
+			android:label="@string/title_activity_member"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+	</application>
 
 </manifest>
