--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,18 @@
 		</service>
 
 		<activity
-			android:name=".activity.InviteActivity"
+			android:name=".activity.InviteGroupActivity"
 			android:label="@string/title_activity_invite"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 		<activity
 			android:name=".activity.MemberActivity"
 			android:label="@string/title_activity_member"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
+		<activity
+			android:name=".activity.InviteRosterActivity"
+			android:label="@string/title_activity_invite_roster"
 			android:theme="@style/AppTheme.NoActionBar">
 		</activity>
 	</application>
