--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,9 @@ dependencies {
     compile 'com.squareup.okio:okio:1.9.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile "com.google.firebase:firebase-messaging:9.2.1"
+    compile 'com.google.android.gms:play-services-analytics:9.2.1'
+    compile 'com.google.android.gms:play-services-wearable:9.2.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
