--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 
 	<application
-		android:name=".conponent.IMApplication"
+		android:name=".component.IMApplication"
 		android:allowBackup="false"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
@@ -21,19 +21,22 @@
 		</activity>
 		<activity
 			android:name=".activity.ChatActivity"
-			android:label="@string/title_activity_chat">
+			android:label="@string/title_activity_chat"
+			android:windowSoftInputMode="stateHidden|adjustResize">>
+
 		</activity>
 
 		<service
-			android:name=".conponent.IMService"
+			android:name=".component.IMService"
 			android:enabled="true"
 			android:exported="true">
 		</service>
 
 		<activity
 			android:name=".activity.InviteMemberActivity"
-			android:label="@string/title_activity_invite"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:label="@string/title_activity_invite_member"
+			android:theme="@style/AppTheme.NoActionBar"
+			android:windowSoftInputMode="stateHidden|adjustPan">
 		</activity>
 		<activity
 			android:name=".activity.ViewMemberActivity"
@@ -43,12 +46,14 @@
 		<activity
 			android:name=".activity.InviteRosterActivity"
 			android:label="@string/title_activity_invite_roster"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar"
+			android:windowSoftInputMode="stateHidden|adjustPan">
 		</activity>
 		<activity
 			android:name=".activity.CreateGroupActivity"
 			android:label="@string/title_activity_create_group"
-			android:theme="@style/AppTheme.NoActionBar">
+			android:theme="@style/AppTheme.NoActionBar"
+			android:windowSoftInputMode="stateHidden|adjustPan">
 		</activity>
 	</application>
 
