--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,17 @@
 		<activity
 			android:name=".activity.MainActivity"
 			android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
+			<!--<intent-filter>-->
+				<!--<action android:name="android.intent.action.MAIN"/>-->
 
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
+				<!--<category android:name="android.intent.category.LAUNCHER"/>-->
+			<!--</intent-filter>-->
 		</activity>
 		<activity
 			android:name=".activity.ChatActivity"
 			android:label="@string/title_activity_chat"
-			android:windowSoftInputMode="stateHidden|adjustResize">>
-
+			android:windowSoftInputMode="stateHidden|adjustResize">
+			>
 		</activity>
 
 		<service
@@ -54,6 +54,13 @@
 			android:label="@string/title_activity_create_group"
 			android:theme="@style/AppTheme.NoActionBar"
 			android:windowSoftInputMode="stateHidden|adjustPan">
+		</activity>
+		<activity android:name=".activity.LoginActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
+
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
 		</activity>
 	</application>
 
