--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,12 +67,22 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'org.apache.commons:commons-collections4:4.1'
     compile 'com.github.clans:fab:1.6.4'
-    compile 'com.squareup.okio:okio:1.9.0'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile "com.google.firebase:firebase-messaging:9.2.1"
     compile 'com.google.android.gms:play-services-analytics:9.2.1'
     compile 'com.google.android.gms:play-services-wearable:9.2.1'
+
+    //rxjava相关依赖
+    compile 'io.reactivex:rxjava:1.2.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    //retrofit相关依赖
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //okhttp相关依赖
+    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
