--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     compile "com.google.firebase:firebase-messaging:9.2.1"
     compile 'com.google.android.gms:play-services-analytics:9.2.1'
     compile 'com.google.android.gms:play-services-wearable:9.2.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.1'
 
     //rxjava相关依赖
     compile 'io.reactivex:rxjava:1.2.1'
