--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:9.2.1'
     compile 'com.google.android.gms:play-services-wearable:9.2.1'
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
+    compile 'cn.carbs.android:AvatarImageView:1.0.2'
 
     //rxjava相关依赖
     compile 'io.reactivex:rxjava:1.2.1'
