--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,13 @@
 		<activity
 			android:name=".activity.MainActivity"
 			android:label="@string/app_name">
-			<!--<intent-filter>-->
-				<!--<action android:name="android.intent.action.MAIN"/>-->
 
-				<!--<category android:name="android.intent.category.LAUNCHER"/>-->
-			<!--</intent-filter>-->
+			<!-- <intent-filter> -->
+			<!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+			<!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+			<!-- </intent-filter> -->
 		</activity>
 		<activity
 			android:name=".activity.ChatActivity"
@@ -65,25 +67,31 @@
 			</intent-filter>
 		</activity>
 
-		<!-- [START gcm_listener] --> <!-- 3.0 -->
-		<!--目的：取得GCM發怖的資料，並發出通知(Notification)-->
-		<service
-			android:name=".component.fcm.MyFcmListenerService">
+		<!-- [START gcm_listener] -->
+		<!-- 3.0 -->
+		<!-- 目的：取得GCM發怖的資料，並發出通知(Notification) -->
+		<service android:name=".component.fcm.MyFcmListenerService">
 			<intent-filter>
-				<action android:name="com.google.firebase.MESSAGING_EVENT" />
+				<action android:name="com.google.firebase.MESSAGING_EVENT"/>
 			</intent-filter>
 		</service>
 		<!-- [END gcm_listener] -->
 
-		<!-- [START instanceId_listener] --> <!-- 3.0 -->
-		<!--目的：用來處理Token有發生改變-->
-		<service
-			android:name=".component.fcm.MyInstanceIDListenerService">
+
+		<!-- [START instanceId_listener] -->
+		<!-- 3.0 -->
+		<!-- 目的：用來處理Token有發生改變 -->
+		<service android:name=".component.fcm.MyInstanceIDListenerService">
 			<intent-filter>
-				<action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+				<action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
 			</intent-filter>
 		</service>
 		<!-- [END instanceId_listener] -->
+		<activity
+			android:name=".data.third_party.ThirdPartyActivity"
+			android:label="@string/title_activity_third_party"
+			android:theme="@style/AppTheme.NoActionBar">
+		</activity>
 	</application>
 
 </manifest>
